--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.180",
+    "gsap": "^3.9.1",
+    "lodash": "^4.17.21",
     "vue": "^3.2.25"
   },
   "devDependencies": {
