--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/greensock": "^1.15.32",
+    "gsap": "^3.9.1",
     "vue": "^3.2.25"
   },
   "devDependencies": {
