--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@types/greensock": "^1.15.32",
-    "gsap": "^3.9.1",
     "@types/lodash": "^4.14.180",
+    "ellipsis.js": "^0.1.3",
+    "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "vue": "^3.2.25"
   },
