--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "@types/greensock": "^1.15.32",
-    "gsap": "^3.9.1",
     "@types/lodash": "^4.14.180",
+    "gsap": "^3.9.1",
     "lodash": "^4.17.21",
-    "vue": "^3.2.25"
+    "sass": "^1.49.9",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
