--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@faker-js/faker": "^6.1.1",
     "@types/greensock": "^1.15.32",
     "@types/lodash": "^4.14.180",
     "ellipsis.js": "^0.1.3",
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
-    "sass": "^1.49.9",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
