--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "vue3-gmap-custom-marker": "^0.0.2",
+    "vue3-google-map": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
