--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "dependencies": {
     "@types/lodash": "^4.14.180",
     "@types/ua-parser-js": "^0.7.36",
+    "axios": "^0.26.1",
     "ellipsis.js": "^0.1.3",
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "ua-parser-js": "^1.0.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
+    "vue-screen": "^2.1.0-beta.1",
     "vue3-gmap-custom-marker": "^0.0.2",
-    "vue3-google-map": "^0.10.0",
-    "vue-screen": "^2.1.0-beta.1"
+    "vue3-google-map": "^0.10.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.1.2",
