--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.21",
     "ua-parser-js": "^1.0.2",
     "vue": "^3.2.25",
+    "vue-axios": "^3.4.1",
     "vue-router": "^4.0.14",
     "vue-screen": "^2.1.0-beta.1",
     "vue3-gmap-custom-marker": "^0.0.2",
