--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.180",
+    "@types/mapbox-gl": "^2.7.0",
     "@types/ua-parser-js": "^0.7.36",
     "axios": "^0.26.1",
     "ellipsis.js": "^0.1.3",
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.8.1",
     "ua-parser-js": "^1.0.2",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14",
