--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/geolib": "^2.0.23",
     "@types/lodash": "^4.14.180",
     "@types/mapbox-gl": "^2.7.0",
     "@types/ua-parser-js": "^0.7.36",
     "axios": "^0.26.1",
     "ellipsis.js": "^0.1.3",
+    "geolib": "^3.3.3",
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.8.1",
