--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/geolib": "^2.0.23",
     "@types/lodash": "^4.14.180",
     "@types/mapbox-gl": "^2.7.0",
     "@types/ua-parser-js": "^0.7.36",
@@ -32,6 +31,7 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
+    "postcss-import": "^14.1.0",
     "sass": "^1.49.9",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.5.4",
