--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gsap": "^3.9.1",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.8.1",
+    "react-native-youtube-iframe": "^2.2.2",
     "ua-parser-js": "^1.0.2",
     "vue": "^3.2.25",
     "vue-axios": "^3.4.1",
