--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ellipsis.js": "^0.1.3",
     "geolib": "^3.3.3",
     "gsap": "^3.10.4",
+    "jw-vue-pagination": "^1.0.3",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.8.1",
     "ua-parser-js": "^1.0.2",
