--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ellipsis.js": "^0.1.3",
     "geolib": "^3.3.3",
     "gsap": "^3.10.4",
+    "http-server": "^14.1.1",
     "jw-vue-pagination": "^1.0.3",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.8.1",
